--- a/bleplugin_projects/Windows/BlePluginWin/BlePluginWin.vcxproj.filters
+++ b/bleplugin_projects/Windows/BlePluginWin/BlePluginWin.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="BleDeviceManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="BluetoothAdapterChecker.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -57,6 +60,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="UnityInterface.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="BluetoothAdapterChecker.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
